--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -52,7 +52,8 @@
             android:padding="12dp"
             app:layout_constraintEnd_toStartOf="@+id/iv_item_share"
             app:layout_constraintTop_toTopOf="@+id/iv_item_share"
-            app:srcCompat="@drawable/ic_bookmark" />
+            app:srcCompat="@drawable/ic_bookmark"
+            android:tint="@color/colorAccent"/>
 
         <ImageView
             android:id="@+id/iv_item_share"
@@ -65,7 +66,8 @@
             app:srcCompat="@drawable/ic_share"
             app:layout_constraintTop_toBottomOf="@+id/tv_item_description"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:tint="@color/colorAccent"/>
 
 
     </android.support.constraint.ConstraintLayout>
