--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,10 +2,16 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="always"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:title="@string/Search"/>
+
     <item android:id="@+id/action_refresh"
         android:title="@string/menu_refresh"
         android:icon="@drawable/ic_refresh"
-        app:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"/>
 
-        />
 </menu>
